# megalo-use-std-mamachari

./: .gitmodules  README.md  xiu.toml
.github/workflows/: deploy.yml
backend/: .env  Cargo.toml  client.py  docker-compose.yml
backend/migrations/2022-12-17-053613_users/: up.sql
backend/migrations/2022-12-17-064903_streams/: up.sql
backend/migrations/2022-12-17-070037_favorites/: down.sql  up.sql
backend/migrations/2022-12-17-070437_comments/: up.sql
backend/migrations/2022-12-17-080625_streams/: up.sql
backend/migrations/2022-12-17-081122_users/: up.sql
backend/migrations/2022-12-17-081620_streams/: up.sql
backend/migrations/2022-12-17-081735_comments/: up.sql
backend/migrations/2022-12-17-085245_users/: up.sql
backend/migrations/2022-12-17-085349_streams/: down.sql  up.sql
backend/migrations/2022-12-17-085510_favorites/: up.sql
backend/migrations/2022-12-17-085557_comments/: up.sql
backend/migrations/2022-12-17-090905_favorites/: up.sql
backend/src/: auth.rs  auth.rs.orig  chat_server.rs  chat_session.rs  controllers.rs  cruds.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  streams.rs
backend/src/controllers/: health.rs  signup.rs
backend/src/db/: schema.rs
backend/src/db/users/: mod.rs
backend/test/: chat_test.html
frontend/: Cargo.toml  index.html  index.scss
frontend/src/: app.rs  auth.js  test.js
nginx/: docker-compose.yml
nginx/mount/: nginx.conf
nginx/mount/sites-enabled/: hls
