[package]
name = "megalo_use_std_mamachari"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-files = "0.6.2"
actix-rt = "2.7.0"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
actix-web-httpauth = "0.6.0"
alcoholic_jwt = "4091.0.0"
anyhow = "1.0.66"
dotenv = "0.15.0"
dataloader = "0.14.0"
r2d2 = "0.8.9"
uuid = { version = "0.8" , features = ["serde", "v4"] }
pwhash = "1.0.0"
jsonwebtoken = "8.1.1"
arc = "0.0.1"
chrono = {version = "0.4", features = ["serde"] }
derive_more = "0.99.17"
#diesel = { version = "2.0.2", features = ["postgres"] }
diesel = { version = "1.4.4", features = ["postgres", "chrono","uuidv07"] }
env_logger = "0.10.0"
fireauth = "0.1.5"
http = "0.2.8"
log = "0.4.17"
rand = "0.8.5"
reqwest = {version = "0.11.13", features = ["json"] }
serde = {version = "1.0.151", features = ["derive"] }
serde_json = "1.0.89"
time = "0.3.17"
url = "2.3.1"

