[package]
name = "megalo_use_std_mamachari"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
yew-router = "0.17.0"
wasm-bindgen = "0.2.83"
web-sys = "0.3.60"
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
chrono = "0.4.23"
serde_json = "1.0.89"
reqwest = { version = "0.11.13", features = ["json"] }
gloo = "0.8.0"
gloo-storage = "0.2.2"